# SREDv5

./: .gitignore  HANDOFF.md  README.md  project.md  pyproject.toml  streamlit_app.py
src/sred/: __init__.py  cli.py  config.py  db.py  gates.py  logging.py
src/sred/agent/: __init__.py  registry.py  runner.py  tools.py
src/sred/ingest/: csv_intel.py  process.py  segment.py  vision.py
src/sred/llm/: openai_client.py
src/sred/models/: __init__.py  agent_log.py  alias.py  artifact.py  base.py  core.py  finance.py  hypothesis.py  memory.py  vector.py  world.py
src/sred/search/: __init__.py  embeddings.py  fts.py  hybrid_search.py  vector_search.py
src/sred/storage/: files.py
src/sred/ui/: state.py  validation.py
src/sred/ui/pages/: 10_trace.py  11_ledger.py  1_run.py  2_people.py  3_uploads.py  4_dashboard.py  5_search.py  6_csv_tools.py  7_agent.py  8_tasks.py  9_payroll.py
tests/: test_agent.py  test_csv_intel.py  test_db.py  test_ingest.py  test_search_logic.py  test_smoke.py  test_ui_logic.py
